--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+body {
+  text-align: center;
+}
+
 .color {
   border: 1px solid black;
   display: inline-block;
@@ -17,4 +21,9 @@
 
 .color:nth-child(4) {
   background-color: blue;
+}
+
+.pixel {
+  display: inline-block;
+  background-color: white;
 }
