--- a/style.css
+++ b/style.css
@@ -26,4 +26,7 @@ body {
 .pixel {
   display: inline-block;
   background-color: white;
+  border: 1px solid black;
+  width: 40px;
+  height: 40px;
 }
