--- a/style.css
+++ b/style.css
@@ -7,19 +7,19 @@ body {
   display: inline-block;
 }
 
-.color:nth-child(1) {
+.color:nth-of-type(1) {
   background-color: black;
 }
 
-.color:nth-child(2) {
+.color:nth-of-type(2) {
   background-color: red;
 }
 
-.color:nth-child(3) {
+.color:nth-of-type(3) {
   background-color: green;
 }
 
-.color:nth-child(4) {
+.color:nth-of-type(4) {
   background-color: blue;
 }
 
