--- a/style.css
+++ b/style.css
@@ -2,25 +2,43 @@ body {
   text-align: center;
 }
 
+section,
+input,
+button {
+  margin-top: 4%
+}
+
+#clear-board {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .color {
   border: 1px solid black;
   display: inline-block;
+  width: 40px;
+  height: 40px;
 }
 
 .color:nth-of-type( 1 ) {
   background-color: black;
+  color: black;
 }
 
 .color:nth-of-type( 2 ) {
   background-color: red;
+  color: red;
 }
 
 .color:nth-of-type( 3 ) {
   background-color: green;
+  color: green;
 }
 
 .color:nth-of-type( 4 ) {
   background-color: blue;
+  color: blue;
 }
 
 .pixel {
@@ -29,4 +47,5 @@ body {
   border: 1px solid black;
   width: 40px;
   height: 40px;
+  
 }
