--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
 section,
 input,
 button {
-  margin-top: 4%
+  margin-top: 4%;
 }
 
 #clear-board {
@@ -21,19 +21,19 @@ button {
   height: 40px;
 }
 
-.color:nth-of-type( 1 ) {
+.color:nth-of-type(1) {
   background-color: black;
 }
 
-.color:nth-of-type( 2 ) {
+.color:nth-of-type(2) {
   background-color: red;
 }
 
-.color:nth-of-type( 3 ) {
+.color:nth-of-type(3) {
   background-color: green;
 }
 
-.color:nth-of-type( 4 ) {
+.color:nth-of-type(4) {
   background-color: blue;
 }
 
